# codesleuth

./: .gitignore  README.md  dhaiso_call_graph.md  pyproject.toml  self_diagram.md
codesleuth/: __init__.py  __main__.py  cli.py  graph_builder.py  models.py  png_exporter.py  scanner.py
codesleuth.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
codesleuth/parsers/: __init__.py  base_parser.py  js_ts_parser.py  python_parser.py  registry.py
codesleuth/renderers/: __init__.py  base_renderer.py  mermaid_renderer.py
codesleuth/tests/: __init__.py  conftest.py  test_cli.py  test_graph_builder.py  test_js_ts_parser.py  test_mermaid_renderer.py  test_models.py  test_python_parser.py  test_scanner.py
codesleuth/tests/fixtures/sample_js/: helpers.js  index.js
codesleuth/tests/fixtures/sample_python/: main.py  utils.py
dhaiso_graphs/: component_00_Lobby_prettify_prettify.md  component_01_sorter.md  component_02_sorter.md  component_03_block-navigation.md  component_04_block-navigation.md  component_05_Card.md  component_06_Logger.md  component_07_GameTable.md  index.md
docs/: architecture.md  extending.md  usage.md
