[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codesleuth"
version = "0.1.0"
description = "A documentation assistant that scans codebases, builds call graphs, and generates Mermaid diagrams."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "pathspec>=0.11",
    "tree-sitter>=0.21,<0.22",
    "tree-sitter-languages>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
codesleuth = "codesleuth.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codesleuth*"]

[tool.pytest.ini_options]
testpaths = ["codesleuth/tests"]
pythonpath = ["."]
